--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -39,24 +39,15 @@ const PROYECTS = [
         isLastOdd: false,
     },
     {
-        title: "Web test UMH",
+        title: "Simulador Code-2 Web",
         description:
-            " Apartado de test de la Universidad Miguel Hernández. En esta web se pueden realizar test de diferentes asignaturas y ver los resultados obtenidos. Con aportaciones de los alumnos.",
-        link: "https://coyotemmk.github.io/test-umh/",
-        github: "https://github.com/coyoteMMK/test-umh",
-        image: "/porfolio-santos/proyects/test-web.webp",
-        tags: [TAGS.HTML, TAGS.CSS, TAGS.JavaScript],
+            "Simulador de la aplicación Code-2. Esta aplicación permite a los alumnos de la Universidad Miguel Hernández realizar simulaciones de exámenes y ver sus resultados.",
+        link: "https://coyotemmk.github.io/Simulador-code-2/",
+        github: "https://github.com/coyoteMMK/Simulador-code-2",
+        image: "/porfolio-santos/proyects/Simulador_code2.webp",
+        tags: [TAGS.HTML, TAGS.JavaScript],
         important: false, // Proyecto destacado
-    },
-    {
-        title: "Web test UMH",
-        description:
-            " Apartado de test de la Universidad Miguel Hernández. En esta web se pueden realizar test de diferentes asignaturas y ver los resultados obtenidos. Con aportaciones de los alumnos.",
-        link: "https://coyotemmk.github.io/test-umh/",
-        github: "https://github.com/coyoteMMK/test-umh",
-        image: "/porfolio-santos/proyects/test-web.webp",
-        tags: [TAGS.HTML, TAGS.CSS, TAGS.JavaScript],
-        important: false, // Proyecto destacado
+        isLastOdd: false,
     },
 ];
 
