--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -8,6 +8,12 @@ const personalImageAlt = "Santos Bernabeu";
   <div
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
+  <p>
+      Estudiante de <em>Ingeniería Informática</em> y <strong
+        >Desarrollador Front-end.</strong
+      >
+    </p>
+    
     <p>
       Me llamo Santos pero mis amigos me llaman coyote. Desde bien pequeño me
       interese en el mundo del desarrollo cuando mi tio me regalo un arduino uno
@@ -24,21 +30,14 @@ const personalImageAlt = "Santos Bernabeu";
       todo un éxito.
     </p>
 
-    <p>
-      Estudiante de <em>Ingeniería Informática</em> y <strong
-        >Desarrollador Front-end.</strong
-      >
-      En constante aprendizaje y mejora de mis habilidades. Soy de Alicante, España
-      🏟️. Especialista en crear espacios únicos.
-    </p>
   </div>
 
   <img
     width="200"
     height="200"
-    src=""
+    src="/porfolio-santos/Santos_2.webp"
     alt={personalImageAlt}
-    class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
+    class="order-1 object-cover w-64 h-full p-1 md:order-2 lg:p-2 lg:w-64 aspect-square rounded-full bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
     style="object-position: 50% 50%"
   />
 </article>
