--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -1,19 +1,20 @@
 ---
 const personalImageAlt = "Santos Bernabeu";
+import Badge from "../components/Badge.astro";
 ---
 
 <article
   class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
 >
   <div
-    class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
+    class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-none"
   >
-  <p>
+    <p>
       Estudiante de <em>Ingeniería Informática</em> y <strong
         >Desarrollador Front-end.</strong
       >
     </p>
-    
+
     <p>
       Me llamo Santos pero mis amigos me llaman coyote. Desde bien pequeño me
       interese en el mundo del desarrollo cuando mi tio me regalo un arduino uno
@@ -29,15 +30,21 @@ const personalImageAlt = "Santos Bernabeu";
       >. Aunque no tenga gran potencia su desarrollo desde un pc doméstico es
       todo un éxito.
     </p>
-
   </div>
+  
+  <span class="relative inline-flex overflow-hidden rounded-full p-[2px] order-1 md:order-none shrink-0">
+    <span
+      class="absolute inset-[-1000%] animate-[spin_4s_linear_infinite] bg-conic/[from_0deg] from-white to-white dark:from-black via-green-400 dark:to-black"
+    ></span>
+    <img
+      width="200"
+      height="200"
+      src="/porfolio-santos/Santos_2.webp"
+      alt={personalImageAlt}
+      class="relative object-cover size-50 md:size-64 rounded-full bg-black/20 dark:bg-yellow-500/5 shrink-0"
+      style="object-position: 50% 50%"
+    />
+  </span>
 
-  <img
-    width="200"
-    height="200"
-    src="/porfolio-santos/Santos_2.webp"
-    alt={personalImageAlt}
-    class="order-1 object-cover w-64 h-full p-1 md:order-2 lg:p-2 lg:w-64 aspect-square rounded-full bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
-    style="object-position: 50% 50%"
-  />
 </article>
+
