--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,12 +23,12 @@ const navItems = [
 
 <header
   class="fixed top-0 z-10 w-full mt-3 md:mt-2 font-medium
-         text-gray-800 dark:text-blue-200 bg-transparent px-4 md:px-0 mx-auto justify-center items-center"
+         text-gray-800 dark:text-blue-200 bg-transparent  mx-auto justify-center items-center"
 >
   <div
     class="flex items-center justify-between
            w-full mx-auto text-gray-800 dark:text-gray-200
-           md:max-w-2xl lg:max-w-4xl"
+           md:max-w-3xl lg:max-w-5xl px-1 md:px-0"
   >
     <!-- Nav cristal líquido -->
     <div
