--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import CodeIcon from "../components/icons/Code.astro";
 import Proyects from "../components/Proyects.astro";
 import TitleSection from "../components/TitleSection.astro";
 import Aboutme from "../components/Aboutme.astro";
+import ScrollToTop from '../components/ScrollToTop.astro';
 ---
 
 <Layout
@@ -16,6 +17,8 @@ import Aboutme from "../components/Aboutme.astro";
 	description="Contrata a Santos Bernabeu, un desarrollador web con más de 15 años de experiencia en la creación de aplicaciones únicas y contenido digital. Con una sólida formación en programación y un enfoque en la innovación, Santos está listo para llevar tu proyecto al siguiente nivel."
 >
 	<main class="px-4">
+		<ScrollToTop />
+		
 		<SectionContainer class="py-16 md:py-36">
 			<Hero />
 		</SectionContainer>
