feat: arregaldo nuevo proyecto

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -8,7 +8,7 @@ const EXPERIENCIE = [
         company: "Dia Group",
         description:
             "Mantener y solucionar problemas con los sistemas tecnológicos que se utilizan para la gestión del almacén, como el software de gestión de almacén, los sistemas de identificación por radiofrecuencia (RFID) y otros dispositivos electrónicos. ",
-        link: "#",
+        link: "https://www.dia.es",
     },
     {
         title: "Prácticas de Soporte TI",
@@ -23,7 +23,7 @@ const EXPERIENCIE = [
         company: "UMH - Universidad Miguel Hernández",
         description:
             "Desarrollar un sistema de IA para la detección de anomalías en el tráfico de red, utilizando técnicas de aprendizaje automático y análisis de datos. Implementar un modelo de IA capaz de identificar patrones inusuales en el tráfico de red y generar alertas en tiempo real.",
-        link: "www.umh.es",
+        link: "https://www.umh.es",
     }
 ];
 ---
