--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,11 @@ const navItems = [
     url: "/porfolio-santos/#experiencia",
   },
   {
+    title: "Conocimientos",
+    label: "conocimientos",
+    url: "/porfolio-santos/#conocimientos",
+  },
+  {
     title: "Proyectos",
     label: "proyectos",
     url: "/porfolio-santos/#proyectos",
@@ -34,7 +39,7 @@ const navItems = [
     <div
       class="header-nav efecto-cristal
              flex items-center md:justify-between justify-evenly
-             text-sm font-medium text-gray-800 dark:text-gray-200
+             text-xs md:text-sm font-medium text-gray-800 dark:text-gray-200
              rounded-full w-full md:flex-1 px-3 h-9 md:h-11"
     >
       <a
