feat: creado componente para conocimientos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import TitleSection from "../components/TitleSection.astro";
 import Aboutme from "../components/Aboutme.astro";
 import ScrollToTop from '../components/ScrollToTop.astro';
 import Databricks from "../components/icons/Databricks.astro";
+import Conocimientos from "../components/Conocimientos.astro";
 ---
 
 <Layout
@@ -36,15 +37,15 @@ import Databricks from "../components/icons/Databricks.astro";
 			<SectionContainer id="conocimientos">
 				<TitleSection>
 					<Databricks class="size-8" />
-					Conocimientos / En construción...
+					Conocimientos
 				</h2>
 				</TitleSection>
-				En construción...
+				<Conocimientos />
 			</SectionContainer>
 
 			<SectionContainer id="proyectos">
 				<TitleSection>
-					<CodeIcon class="size-7" />
+					<CodeIcon class="size-8" />
 					Proyectos
 				</h2>
 				</TitleSection>
