feat: añadido contenedor de sección vacío en la página principal

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,6 +62,10 @@ import Conocimientos from "../components/Conocimientos.astro";
 				</TitleSection>
 				<Aboutme/>
 			</SectionContainer>
+
+			<SectionContainer>
+				
+			</SectionContainer>
 		</div>
 	</main>
 </Layout>
